# fwmc

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  launch.bat  launch.sh  setup.sh
.github/workflows/: ci.yml
brain-model/: README.md
brain-model/core/: brain_spec_loader.h  cell_types.h  checkpoint.h  config_loader.h  connectome_export.h  connectome_loader.h  connectome_stats.h  cpg.h  error.h  experiment_config.h  experiment_protocol.h  gap_junctions.h  intrinsic_homeostasis.h  izhikevich.h  log.h  motor_output.h  neuron_array.h  nwb_export.h  param_sweep.h  parametric_gen.h  parametric_sync.h  platform.h  proprioception.h  rate_monitor.h  recorder.h  region_metrics.h  short_term_plasticity.h  stdp.h  stimulus_event.h  structural_plasticity.h  synapse_table.h  version.h
brain-model/tissue/: brain_sdf.h  lod_manager.h  neural_field.h  voxel_grid.h
docs/: api_reference.md  architecture.md  bidirectional_neural_twinning.md  experiments_roadmap.md  methods.md
examples/: antennal_lobe.brain  central_complex.brain  drosophila_full.brain  human_cortical_column.brain  mb_shadow_validation.cfg  mouse_cortical_column.brain  parametric_mushroom_body.brain  phase1_openloop.cfg  phase2_shadow.cfg  phase3_closedloop.cfg  zebrafish_optic_tectum.brain
examples/protocols/: ablation_study.protocol  full_twinning.protocol  odor_learning.protocol  odor_learning.stim  sweep_weight_scale.protocol
literature/: check_sources.py  lib.py  validate_all.py  verify_notes.py
scripts/: analyze_results.py  convert_connectome.py  download_flywire.sh  import_connectome.py  live_dashboard.py  make_readme_raster.py  renom.sh  run_drosophila.sh  validate_electrophysiology.py  visualize.py
src/: bridge_self_test.h  conditioning_experiment.h  experiment_runner.h  fwmc.cc  multi_trial.h
src/bridge/: bridge_channel.h  bridge_checkpoint.h  calibrator.h  file_read_channel.h  hardware_channel.h  light_model.h  neuron_replacer.h  opsin_model.h  optogenetic_writer.h  protocol.h  shadow_tracker.h  spike_decoder.h  stimulus.h  tcp_bridge.h  twin_bridge.h  validation.h
src/cuda/: gpu_manager.h  izhikevich_kernel.cu  kernels.cuh  spike_propagation_kernel.cu  stdp_kernel.cu
tests/: bench_core.cc  test_brain_sim.cc  test_bridge.cc  test_core.cc  test_harness.h  test_parametric.cc  test_tissue.cc
viewer/: CMakeLists.txt  body_viewport.h  mujoco_fly.h  regions.toml  tcp_server.h  viewer.cc
